PharmaDemo/src/objects/TF__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Calls__c</fullName>
        <label>Actual Calls</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Indicator__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?cht=gom&amp;chs=45x30&amp;chf=bg,s,F3F3EC&amp;chd=t:&quot; &amp; TEXT(pc_Target_Calls__c ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>TMF1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Call_Report_Date__c</fullName>
        <description>Shows the last call report date with this account for a specific medical rep</description>
        <label>Last Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Frequency__c</fullName>
        <label>Proposed Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Calls__c</fullName>
        <formula>IF(ISPICKVAL(Frequency__c, &quot;High&quot;),24, 
IF(ISPICKVAL(Frequency__c, &quot;Medium&quot;),12, 
IF(ISPICKVAL(Frequency__c, &quot;Low&quot;),8, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <referenceTo>Target__c</referenceTo>
        <relationshipName>TMF</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ToBeApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Concatenation of target (user id) and customer (account id) separated by a pipe: Target__c|Customer__c. This is used to easily calculated actual frequency and will be maintained by a workflow rule.</description>
        <label>Unique Id</label>
        <length>31</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Target__r.MedRep__r.Id, Target__r.Name,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id ,IF(TEXT( Status__c) =&apos;Pending&apos;,IMAGE(&quot;/img/icon/custom51_100/gears24.png&quot;, &quot;Pending&quot;),IF(TEXT(Status__c)=&apos;Submitted&apos;,IMAGE(&apos;/img/icon/custom51_100/padlock24.png&apos;, &quot;Locked&quot;),IF(TEXT(Frequency__c)=&apos;High&apos;,IMAGE(&apos;/img/samples/flag_green.gif&apos;,&apos;High&apos;),IF(TEXT(Frequency__c)=&apos;Medium&apos;,IMAGE(&apos;/img/samples/flag_yellow.gif&apos;,&apos;Medium&apos;),IF(TEXT(Frequency__c)=&apos;Low&apos;,IMAGE(&apos;/img/samples/flag_red.gif&apos;,&apos;Medium&apos;),&apos;&apos;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pc_Target_Calls__c</fullName>
        <formula>IF (Target_Calls__c &gt; 0, ROUND( (Actual_Calls__c / Target_Calls__c) * 100, 0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Target Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Target Frequency</label>
    <listViews>
        <fullName>AllTargets</fullName>
        <columns>View__c</columns>
        <columns>Customer__c</columns>
        <columns>Target_Calls__c</columns>
        <columns>Actual_Calls__c</columns>
        <columns>Call_Indicator__c</columns>
        <columns>Last_Call_Report_Date__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Targets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyApprovedTargets</fullName>
        <columns>View__c</columns>
        <columns>Customer__c</columns>
        <columns>Target_Calls__c</columns>
        <columns>Actual_Calls__c</columns>
        <columns>Call_Indicator__c</columns>
        <columns>Last_Call_Report_Date__c</columns>
        <columns>Frequency__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TF__c.ApprovedTargetFrequency</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>My Approved Targets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyPendingTargets</fullName>
        <columns>View__c</columns>
        <columns>Customer__c</columns>
        <columns>Proposed_Frequency__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TF__c.Pending_Target_Frequency</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>My Pending Targets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyRejectedTargets</fullName>
        <columns>View__c</columns>
        <columns>Customer__c</columns>
        <columns>Proposed_Frequency__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TF__c.Rejected_Target_Frequency</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>My Rejected Targets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MySubmittedTargets</fullName>
        <columns>View__c</columns>
        <columns>Customer__c</columns>
        <columns>Target_Calls__c</columns>
        <columns>Actual_Calls__c</columns>
        <columns>Call_Indicator__c</columns>
        <columns>Last_Call_Report_Date__c</columns>
        <columns>Frequency__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TF__c.Submitted_Target_Frequency</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>My Submitted Targets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TF-{0000000}</displayFormat>
        <label>TF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Frequency</pluralLabel>
    <recordTypes>
        <fullName>ApprovedTargetFrequency</fullName>
        <active>true</active>
        <label>Approved Target Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pending_Target_Frequency</fullName>
        <active>true</active>
        <label>Pending Target Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rejected_Target_Frequency</fullName>
        <active>true</active>
        <label>Rejected Target Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Submitted_Target_Frequency</fullName>
        <active>true</active>
        <label>Submitted Target Frequency</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>